--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -423,3 +423,56 @@ api_rev = v3
 [admin]
 # UI to hide sensitive variable fields when set to True
 hide_sensitive_variable_fields = True
+
+[kubernetes]
+# The repository and tag of the Kubernetes Image for the Worker to Run
+# worker_container_repository = ''
+# worker_container_tag = ''
+
+# If True (default), worker pods will be deleted upon termination
+# delete_worker_pods = True
+
+# The Kubernetes namespace where airflow workers should be created. Defaults to `default`
+# namespace = default
+
+# The name of the Kubernetes ConfigMap Containing the Airflow Configuration (this file)
+# airflow_configmap = ''
+
+# For either git sync or volume mounted DAGs, the worker will look in this subpath for DAGs
+# dags_volume_subpath = ''
+
+# For DAGs mounted via a volume claim (mutually exclusive with volume claim)
+# dags_volume_claim = ''
+
+# Git credentials and repository for DAGs mounted via Git (mutually exclusive with volume claim)
+# git_repo = https://github.com/<your-organization>/<your-repository>
+# git_branch = master
+# git_user = <your-user>
+# git_password = <your-password>
+
+# For cloning DAGs from git repositories into volumes: https://github.com/kubernetes/git-sync
+git_sync_container_repository = gcr.io/google-containers/git-sync-amd64
+git_sync_container_tag = v2.0.5
+git_sync_init_container_name = git-sync-clone
+
+# The name of the Airflow secrets object in kubernetes containing all secrets defined in the
+# [kubernetes_secrets] section, if any.
+# kubernetes_secrets_object = ''
+
+[kubernetes_secrets]
+# The scheduler mounts the following secrets into your workers as they are launched by the
+# scheduler. You may define as many secrets as needed and the kubernetes launcher will parse the
+# defined secrets and mount them as secret environment variables in the launched workers.
+# NOTE: Only secrets defined in the secrets object from the above [kubernetes]
+# `kubernetes_secrets_object` will be loaded and used.
+#
+# Secrets in this section are defined as follows
+#     <kubernetes_secret_key>: <environment_variable_mount>
+#
+# For example if you wanted to mount a kubernetes secret key named `postgres_password` from the
+# kubernetes secret as the environment variable `POSTGRES_PASSWORD` into your workers you would
+# follow the following format:
+#     postgres_credentials = POSTGRES_PASSWORD
+#
+# Additionally you may override worker airflow settings with the AIRFLOW__<SECTION>__<KEY>
+# formatting as supported by airflow normally.
