--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -461,24 +461,27 @@ git_sync_container_repository = gcr.io/google-containers/git-sync-amd64
 git_sync_container_tag = v2.0.5
 git_sync_init_container_name = git-sync-clone
 
-# The name of the Airflow secrets object in kubernetes containing all secrets defined in the
-# [kubernetes_secrets] section, if any.
-# kubernetes_secrets_object = ''
+# The name of the Kubernetes service account to be associated with airflow workers, if any.
+# Service accounts are required for workers that require access to secrets or cluster resources.
+# See the Kubernetes RBAC documentation for more:
+#   https://kubernetes.io/docs/admin/authorization/rbac/
+worker_service_account_name = 'default'
+
+# Any image pull secrets to be given to worker pods, If more than one secret is
+# required, provide a comma separated list: secret_a,secret_b
+# image_pull_secrets = ''
 
 [kubernetes_secrets]
 # The scheduler mounts the following secrets into your workers as they are launched by the
 # scheduler. You may define as many secrets as needed and the kubernetes launcher will parse the
 # defined secrets and mount them as secret environment variables in the launched workers.
-# NOTE: Only secrets defined in the secrets object from the above [kubernetes]
-# `kubernetes_secrets_object` will be loaded and used.
-#
 # Secrets in this section are defined as follows
-#     <kubernetes_secret_key>: <environment_variable_mount>
+#     <kubernetes_secret_object>: <kubernetes_secret_key>:<environment_variable_mount>
 #
 # For example if you wanted to mount a kubernetes secret key named `postgres_password` from the
-# kubernetes secret as the environment variable `POSTGRES_PASSWORD` into your workers you would
-# follow the following format:
-#     postgres_credentials = POSTGRES_PASSWORD
+# kubernetes secret object `airflow-secret` as the environment variable `POSTGRES_PASSWORD` into
+# your workers you would follow the following format:
+#     airflow-secret = postgres_credentials:POSTGRES_PASSWORD
 #
 # Additionally you may override worker airflow settings with the AIRFLOW__<SECTION>__<KEY>
 # formatting as supported by airflow normally.
