--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -476,12 +476,12 @@ worker_service_account_name = 'default'
 # scheduler. You may define as many secrets as needed and the kubernetes launcher will parse the
 # defined secrets and mount them as secret environment variables in the launched workers.
 # Secrets in this section are defined as follows
-#     <kubernetes_secret_object>: <kubernetes_secret_key>:<environment_variable_mount>
+#     <environment_variable_mount> = <kubernetes_secret_object>:<kubernetes_secret_key>
 #
 # For example if you wanted to mount a kubernetes secret key named `postgres_password` from the
 # kubernetes secret object `airflow-secret` as the environment variable `POSTGRES_PASSWORD` into
 # your workers you would follow the following format:
-#     airflow-secret = postgres_credentials:POSTGRES_PASSWORD
+#     POSTGRES_PASSWORD = airflow-secret:postgres_credentials
 #
 # Additionally you may override worker airflow settings with the AIRFLOW__<SECTION>__<KEY>
 # formatting as supported by airflow normally.
