--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -465,7 +465,7 @@ git_sync_init_container_name = git-sync-clone
 # Service accounts are required for workers that require access to secrets or cluster resources.
 # See the Kubernetes RBAC documentation for more:
 #   https://kubernetes.io/docs/admin/authorization/rbac/
-worker_service_account_name = 'default'
+# worker_service_account_name = default
 
 # Any image pull secrets to be given to worker pods, If more than one secret is
 # required, provide a comma separated list: secret_a,secret_b
