Consolidate worker setup and address code review comments

--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -471,6 +471,9 @@ git_sync_init_container_name = git-sync-clone
 # required, provide a comma separated list: secret_a,secret_b
 # image_pull_secrets = ''
 
+# GCP Service Account Keys to be provided to tasks run on Kubernetes Executors
+gcp_service_account_keys = key-name-1:key-path-1,key-name-2:key-path-2
+
 [kubernetes_secrets]
 # The scheduler mounts the following secrets into your workers as they are launched by the
 # scheduler. You may define as many secrets as needed and the kubernetes launcher will parse the
