--- a/scripts/ci/requirements.txt
+++ b/scripts/ci/requirements.txt
@@ -1,5 +1,5 @@
 #
-# Licensed under the Apache License, Version 2.0 (the "License");
+# Licensed RUN_KUBE_INTEGRATIONunder the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
@@ -49,6 +49,7 @@ ipython
 jaydebeapi
 jinja2<2.9.0
 jira
+kubernetes>=3.0.0
 ldap3
 lxml
 markdown
